force-app/main/default/objects/Resource_Engagement__c/Resource_Engagement__c.object-meta.xml
<CustomObject>
    <label>Resource Engagement</label>
    <nameField>
        <displayFormat>RE-{00000}</displayFormat>
        <label>Resource Engagement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>