force-app/main/default/objects/Resource_Engagement__c/fields/Biography_Available__c.field-meta.xml
<CustomField>
    <fullName>Biography_Available__c</fullName>
    <formula>Resource__r.Biography_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biography Available</label>
    <type>Checkbox</type>
</CustomField>