force-app/main/default/objects/Resource_Engagement__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>