force-app/main/default/objects/Resource_Engagement__c/fields/Headshot_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Headshot_Date_Received__c</fullName>
    <formula>Resource__r.Headshot_Date_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headshot Date Received</label>
    <type>Date</type>
</CustomField>