force-app/main/default/objects/Resource_Engagement__c/fields/Headshot_Link__c.field-meta.xml
<CustomField>
    <fullName>Headshot_Link__c</fullName>
    <formula>Resource__r.Headshot_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headshot Link</label>
    <type>Text</type>
</CustomField>