force-app/main/default/objects/Resource_Engagement__c/fields/Other_Topic__c.field-meta.xml
<CustomField>
    <fullName>Other_Topic__c</fullName>
    <label>Other Topic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>