force-app/main/default/objects/Resource_Engagement__c/fields/Privacy_Removal_Request__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Removal_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Indicates that the contact has requested to be removed from our database.</inlineHelpText>
    <label>Privacy Removal Request</label>
    <type>Checkbox</type>
</CustomField>