force-app/main/default/objects/Resource_Engagement__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description
  >Created for Ticket #81677 to designate if the Project on a Resource Engagement is Open when reviewing an &quot;Erase My Data&quot; Privacy Removal Request.</description>
    <formula>IF(AND(
         TEXT(Project__r.Project_Phase__c)&lt;&gt;&quot;Post-Production Required&quot;,
         TEXT(Project__r.Project_Phase__c)&lt;&gt;&quot;Completed&quot;,
         TEXT(Project__r.Project_Phase__c)&lt;&gt;&quot;Cancelled&quot;,
         TEXT(Project__r.Project_Stage__c)&lt;&gt;&quot;Completed&quot;,
         TEXT(Project__r.Project_Stage__c)&lt;&gt;&quot;Cancelled&quot;,
         TEXT(Project__r.Project_Stage__c)&lt;&gt;&quot;Closed&quot;

         ), &quot;Open&quot;, &quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>