force-app/main/default/objects/Resource_Engagement__c/fields/Quote_Approved__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Approved</label>
    <type>Checkbox</type>
</CustomField>