force-app/main/default/objects/Resource_Engagement__c/fields/Signed_Consent_Release_Form__c.field-meta.xml
<CustomField>
    <fullName>Signed_Consent_Release_Form__c</fullName>
    <label>Signed Consent &amp; Release Form URL</label>
    <type>Url</type>
</CustomField>