force-app/main/default/objects/Resource_Engagement__c/fields/Signed_Master_Writer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Signed_Master_Writer_Agreement__c</fullName>
    <formula>Resource__r.Signed_Master_Writer_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed Master Writer Agreement</label>
    <type>Text</type>
</CustomField>