force-app/main/default/objects/Resource_Engagement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interviewee</fullName>
            </value>
            <value>
                <fullName>Public Sector Interviewee</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Writer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>