force-app/main/default/objects/Resource_Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>Type__c</columns>
    <columns>Topic__c</columns>
    <columns>Event__c</columns>
    <columns>Project__c</columns>
    <columns>Date_Requested__c</columns>
    <columns>Date_Accepted__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>