force-app/main/default/objects/Resource_Engagement__c/listViews/Engagements_Accepted.listView-meta.xml
<ListView>
    <fullName>Engagements_Accepted</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>Type__c</columns>
    <columns>Topic__c</columns>
    <columns>Event__c</columns>
    <columns>Project__c</columns>
    <columns>Date_Accepted__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>All Resource Engagements - Accepted</label>
</ListView>