force-app/main/default/objects/Resource_Engagement__c/listViews/Engagements_Declined.listView-meta.xml
<ListView>
    <fullName>Engagements_Declined</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>Type__c</columns>
    <columns>Topic__c</columns>
    <columns>Event__c</columns>
    <columns>Project__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Declined,Canceled</value>
    </filters>
    <label>All Resource Engagements -Decline/Cancel</label>
</ListView>