force-app/main/default/objects/Resource_Engagement__c/listViews/My_Engagement_Records.listView-meta.xml
<ListView>
    <fullName>My_Engagement_Records</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>Type__c</columns>
    <columns>Topic__c</columns>
    <columns>Event__c</columns>
    <columns>Project__c</columns>
    <columns>Date_Requested__c</columns>
    <columns>Date_Accepted__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Resource Engagement Records</label>
</ListView>