force-app/main/default/objects/Resource_Engagement__c/listViews/My_Engagements_Declined_or_Canceled.listView-meta.xml
<ListView>
    <fullName>My_Engagements_Declined_or_Canceled</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>Type__c</columns>
    <columns>Topic__c</columns>
    <columns>Event__c</columns>
    <columns>Project__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Declined,Canceled</value>
    </filters>
    <label>My Resource Engagements - Decline/Cancel</label>
</ListView>